cmake_minimum_required(VERSION 2.8)
project( CarCounting )
find_package( Curses REQUIRED )
find_package( OpenCV REQUIRED )
include_directories(include)
include_directories( "/usr/include" )
file(GLOB SOURCES "src/*.cpp")
add_executable( CarCounting ${SOURCES} )
set(CMAKE_CXX_FLAGS "-std=c++11")
target_link_libraries( CarCounting ${OpenCV_LIBS} ${CURSES_LIBRARIES} )
